Fri Aug 17 23:07:45 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the getkey command handling in the server.  Send just
	  empty OK reply to the sender if the key could not be fetched
	  (but everything else was ok, like the key just was not available).
	  Changed the public key parameter to optional in the protocol
	  specs so that empty OK reply can be sent.  Affected file
	  silcd/command.c.

	  Added a message to Irssi SILC client to tell to user if the
	  server did not return a public key.

Tue Aug 14 07:29:27 CEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a channel key regeneration bug.  It registered new
	  timeout tasks exponentially until all system resources were
	  used.  Affected file silcd/server.c.

Sun Aug 12 20:48:14 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added the SILC Document generator to the scripts/silcdoc.
	  It can be used to generate the Toolkit Reference Manual out
	  of the source tree.  Internally it will also use the RoboDoc
	  generator now imported in util/robodoc.

Sun Aug 12 12:28:17 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added couple of return's in rekey protocol if error orccurred
	  during the protocol.  The execution must be terminated.
	  Affected file silcd/protocol.c.  Also, terminate the protocol
	  always with timeout.

Sat Aug 11 12:36:02 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* The client's Client ID was created initally from the wrong
	  nickname (it could have been in format nick@host) in the
	  silc_server_new_client.  Affected file silcd/packet_receive.c

Sat Aug 11 00:29:57 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added some SILC_LOG_ERROR's to various error conditions
	  if client could not be added to ID cache.  Affected files
	  silcd/packet_receive.c and silcd/server.c.

	* When client's sock->user_data is freed, NULL also the 
	  client->router and client->connection pointers.  Added check