@@ -1,3 +1,10 @@
+Sun Aug 26 14:59:15 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed a bug in silc_client_command_identify_save when saving
+	  new channel information.  The channel name was no duplicated
+	  and caused crash on exit.  Affected file is
+	  lib/silcclient/command_reply.c.
+
 Fri Aug 17 23:07:45 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed the getkey command handling in the server.  Send just
